completed the audit functionality

--- a/SearchBar-suggestions/src/main/resources/templates/dashBoard.html
+++ b/SearchBar-suggestions/src/main/resources/templates/dashBoard.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Google Charts With Thymeleaf</title>
     <!--Load the AJAX API-->
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script th:inline="javascript">
+    var searchesData =  [[${searchesData}]] ;
+    console.log(searchesData);
+
+</script>
     <script type="text/javascript">
 
+    
+    console.log(searchesData);
+    var result = [];
+
+  /*   var arr = [];
+    var marr=[];
+    for (var {keyword: k, count: c} of searchesData) {
+    	  console.log('Keyword: ' + k + ', Count: ' + c);
+    	  console.log('Keyword tyoe: ' +typeof k + ', Count type: ' +typeof c);
+    	 
+    	 marr.push(arr.push(k, c));
+    	 console.log("converting");
+    	  console.log(arr); 
+    	  arr.pop();
+    	 	} */
+   
         // Load the Visualization API and the corechart package.
         google.charts.load('current', {'packages':['corechart']});
 
@@ -20,16 +41,30 @@
 
             // Create the data table.
             var data = new google.visualization.DataTable();
-            data.addColumn('string', 'Topping');
-            data.addColumn('number', 'Slices');
-            data.addRows([
+            data.addColumn('string', 'Keyword');
+            data.addColumn('number', 'Count');
+            
+            for(var i in searchesData){
+            	delete searchesData[i].id;
+            	console.log("value to single");
+            	console.log(Object.values(searchesData[0]));
+                //result.push([i, searchesData[i]]);
+                result.push(Object.values(searchesData[i]));
+                //data.addRows(result);
+                
+            }
+            console.log("converted array");
+            console.log(result);
+            data.addRows(result);
+             /* data.addRows([
                 ['Mushrooms', 3],
                 ['Onions', 1],
                 ['Olives', 1],
                 ['Zucchini', 1],
                 ['Pepperoni', 2]
-            ]);
+            ]); */ 
 
+            
             // Set chart options
             var options = {'title':'How Much Pizza I Ate Last Night',
                 'width':400,
